--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -9,18 +9,18 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.7",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.1",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "2.9.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.0.0-rc.10",
+    "react-native-reanimated": "3.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.20.0",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
