--- a/.github/workflows/verify-android.yml
+++ b/.github/workflows/verify-android.yml
@@ -15,9 +15,9 @@ on:
       - 'android/**'
 
 jobs:
-  lint:
+  ktlint:
     runs-on: ubuntu-latest
-    name: Kotlin Lint
+    name: 🔎 Kotlin Lint
     steps:
       - uses: actions/checkout@v3
       - uses: touchlab-lab/ktlint-action-setup@1.0.0
@@ -26,7 +26,7 @@ jobs:
       - run: ktlint "android/src/**/*.kt"
   android-lint:
     runs-on: ubuntu-latest
-    name: Android Lint
+    name: 🔎 Android Lint
     defaults:
       run:
         working-directory: ./android
@@ -41,3 +41,20 @@ jobs:
         run: yarn install --frozen-lockfile --cwd ..
       - name: Run Gradle Lint
         run: ./gradlew lint
+  android-build:
+    runs-on: ubuntu-latest
+    name: 🏗️ Android Build
+    defaults:
+      run:
+        working-directory: ./android
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'microsoft'
+          java-version: '11'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile --cwd ..
+      - name: Run Gradle Lint
+        run: ./gradlew assembleDebug
