--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -9,27 +9,27 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.7",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.1",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "2.7.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.0.0-rc.2",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "3.17.0",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-reanimated": "3.0.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.20.0",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/react-native": "^0.70.6",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "0.73.7",
     "patch-package": "^6.4.7",
-    "typescript": "^4.8.3"
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native",
