--- a/example/package.json
+++ b/example/package.json
@@ -10,36 +10,40 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.7",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.1",
-    "lottie-react-native": "^5.1.4",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "2.7.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "lottie-react-native": "^5.1.5",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-native": "^11.5.0",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
-    "babel-jest": "^26.6.3",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "react-test-renderer": "18.1.0"
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.7",
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": ["./jestSetup.js"],
+    "setupFiles": [
+      "./jestSetup.js"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
     ],
