fix: use minSdkVersion from root project

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,7 +42,7 @@ if (isNewArchitectureEnabled()) {
 android {
   compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
   defaultConfig {
-    minSdkVersion 16
+    minSdkVersion getExtOrIntegerDefault('minSdkVersion')
     targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
     versionCode 1
     versionName "1.0"
