--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
 KeyboardController_kotlinVersion=1.6.21
 KeyboardController_compileSdkVersion=33
 KeyboardController_targetSdkVersion=33
+KeyboardController_minSdkVersion=16
 
 android.useAndroidX=true
