--- a/docs/package.json
+++ b/docs/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "markdownlint-cli2": "^0.7.1",
     "typescript": "^4.7.4"
   },
   "browserslist": {
