--- a/example/package.json
+++ b/example/package.json
@@ -18,8 +18,10 @@
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "^2.14.4",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6"
