--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,11 @@ if (isNewArchitectureEnabled()) {
 }
 
 android {
+  def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION
+  if (agpVersion.tokenize('.')[0].toInteger() >= 7) {
+    namespace "com.reactnativekeyboardcontroller"
+  }
+
   compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault('minSdkVersion')
