--- a/example/package.json
+++ b/example/package.json
@@ -10,34 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.16",
-    "lottie-react-native": "^5.1.5",
+    "@react-navigation/stack": "^6.3.17",
+    "lottie-react-native": "^6.0.0-rc.7",
     "react": "18.2.0",
-    "react-native": "0.71.11",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native": "0.72.0",
+    "react-native-gesture-handler": "2.12.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-reanimated": "3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native/metro-config": "^0.72.6",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-native": "^11.5.0",
-    "@tsconfig/react-native": "^2.0.2",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.10",
+    "metro-react-native-babel-preset": "0.76.5",
     "react-test-renderer": "18.2.0"
   },
   "jest": {
@@ -52,5 +54,8 @@
       "<rootDir>/node_modules",
       "node_modules"
     ]
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
