--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.2",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -70,9 +70,9 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.4.1",
     "react": "18.2.0",
-    "react-native": "0.71.11",
+    "react-native": "0.72.0",
     "react-native-builder-bob": "^0.18.0",
-    "react-native-reanimated": "2.14.4",
+    "react-native-reanimated": "3.3.0",
     "release-it": "^14.2.2",
     "typescript": "^4.8.4"
   },
@@ -113,7 +113,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@react-native-community",
+      "@react-native",
       "prettier"
     ],
     "rules": {
