--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "lottie-react-native": "^6.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "2.12.0",
