--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "test": "jest",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -28,8 +29,12 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@testing-library/jest-native": "^5.3.3",
+    "@testing-library/react-native": "^11.5.0",
     "@react-native/metro-config": "^0.72.6",
     "@tsconfig/react-native": "^3.0.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "metro-react-native-babel-preset": "0.76.5",
@@ -45,6 +50,14 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": ["./jestSetup.js"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ],
+    "moduleDirectories": [
+      "<rootDir>/node_modules",
+      "node_modules"
     ]
   },
   "engines": {
