refactor: attempt to fix CI

--- a/.github/workflows/verify-js.yml
+++ b/.github/workflows/verify-js.yml
@@ -52,6 +52,8 @@ jobs:
           yarn install --frozen-lockfile
           cd example
           yarn install --frozen-lockfile
+          cd ../FabricExample
+          yarn install --frozen-lockfile
       - name: Run lib tests
         run: yarn test src
       - name: Run example app tests (verify mocks)
