--- a/.github/workflows/verify-docs.yml
+++ b/.github/workflows/verify-docs.yml
@@ -46,7 +46,7 @@ jobs:
     name: 🛫 Deploy preview
     defaults:
       run:
-        working-directory: ./docs
+        working-directory: docs
     steps:
       - run: echo "PREVIEW_PATH=pr-preview/pr-${{ github.event.number }}" >> "$GITHUB_ENV"
       - uses: actions/checkout@v3
