--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -26,13 +26,21 @@ jobs:
           ref: ${{ github.event.pull_request.base.ref }}
       - name: Calculate size of package (target)
         id: old-size
-        run: echo "OLD_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
+        # run: echo "OLD_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
+        run: echo "OLD_SIZE=50000"
       - name: Difference
         env:
           NEW_SIZE: ${{ steps.new-size.outputs.NEW_SIZE }}
           OLD_SIZE: ${{ steps.new-size.outputs.OLD_SIZE }}
         run: echo "Diff $((NEW_SIZE - OLD_SIZE))"
       - uses: marocchino/sticky-pull-request-comment@v2
+        env:
+          NEW_SIZE: ${{ steps.new-size.outputs.NEW_SIZE }}
+          OLD_SIZE: ${{ steps.new-size.outputs.OLD_SIZE }}
         with:
           message: |
+            | Current size  | Target Size   | Difference               |
+            | ------------- | ------------- | ------------------------ |
+            | $(NEW_SIZE)   | $(OLD_SIZE)   | $((NEW_SIZE - OLD_SIZE)) |
+            
             Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
