--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -41,6 +41,6 @@ jobs:
           message: |
             | Current size  | Target Size   | Difference               |
             | ------------- | ------------- | ------------------------ |
-            | $(NEW_SIZE)   | $(OLD_SIZE)   | $((NEW_SIZE - OLD_SIZE)) |
+            | ${{ NEW_SIZE) }}  | ${{ OLD_SIZE)  }}  | ${{ NEW_SIZE - OLD_SIZE }} |
             
             Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
