--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -41,6 +41,6 @@ jobs:
           message: |
             | Current size  | Target Size   | Difference               |
             | ------------- | ------------- | ------------------------ |
-            | ${{ steps.new-size.outputs.NEW_SIZE) }}  | ${{ steps.new-size.outputs.OLD_SIZE)  }}  | X |
+            | ${{ steps.new-size.outputs.NEW_SIZE }}  | ${{ steps.new-size.outputs.OLD_SIZE  }}  | X |
             
             Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
