--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Calculate size of package (current)
         id: new-size
-        run: echo "NEW_SIZE=$(node scripts/size.js)" >> "$GITHUB_OUTPUT"
+        run: echo "NEW_SIZE=$(node scripts/size.js)"
       - name: Calculate difference
         id: diff
         env:
