--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -36,7 +36,7 @@ jobs:
           OLD_SIZE: ${{ steps.old-size.outputs.OLD_SIZE }}
         run: |
           echo "DIFF=$((NEW_SIZE - OLD_SIZE))" >> "$GITHUB_OUTPUT"
-          echo "SIGN=$([ $((NEW_SIZE - OLD_SIZE)) > 0 ] && echo "📈" || echo "📉")" >> "$GITHUB_OUTPUT"
+          echo "SIGN=$([ $((NEW_SIZE - OLD_SIZE)) -gt 0 ] && echo "📈" || echo "📉")" >> "$GITHUB_OUTPUT"
       - uses: marocchino/sticky-pull-request-comment@v2
         env:
           NEW_SIZE: ${{ steps.new-size.outputs.NEW_SIZE }}
