refactor: change paths for size diff

--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -2,12 +2,11 @@ name: 🧪 Size diff
 
 on:
   pull_request:
-    paths:
-      - '*'
-      - '!example/**'
-      - '!FabricExample/**'
-      - '!docs/**'
-      - '!scripts/**'
+    paths-ignore:
+      - 'example/**'
+      - 'FabricExample/**'
+      - 'docs/**'
+      - 'scripts/**'
 
 jobs:
   check-diff:
