ci: added `detekt` for kotlin static analysis (#199)
## 📜 Description

Added `detekt` for static analysis of `kotlin` code.

## 💡 Motivation and Context

I wasn't satisfied with the quality of the `kotlin` code, because
sometimes I wrote big lines of the code, sometimes I wrote code-smells
and didn't know about it. With the usage of `detekt` all these issues
will be detected and reported.

I've added CI job to constantly run it whenever `kotlin` files were
changed.

Potentially `detekt` could be added as a `gradle` plugin and we could
run it during the build, but I decided to integrate it as a separate
tool, since all other linters/tools integrated in CI as separate tools
(so just decided to keep a consistency).

## 📢 Changelog

### Android
- resolved all issues reported by `detekt`;

## 🤔 How Has This Been Tested?

Tested manually on Pixel 7 Pro (android) + verified that CI can be
passed.

## 📝 Checklist

- [x] CI successfully passed

--- a/.github/workflows/size-diff.yml
+++ b/.github/workflows/size-diff.yml
@@ -2,12 +2,10 @@ name: 🧪 Size diff
 
 on:
   pull_request:
-    paths:
-      - '.github/workflows/size-diff.yml'
-      - '!example/**'
-      - '!FabricExample/**'
-      - '!docs/**'
-      - '!scripts/**'
+    paths-ignore:
+      - 'example/**'
+      - 'FabricExample/**'
+      - 'docs/**'
 
 jobs:
   check-diff:
