--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/native-stack": "^6.9.13",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.11",
