refactor: change scanning path

--- a/.github/workflows/compress-lottie.yml
+++ b/.github/workflows/compress-lottie.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/compress-lottie.yml'
-      - 'docs/**/**.lottie.json'
+      - 'docs/**'
 
 jobs:
   compress-lottie:
