refactor: steb by step add new code

--- a/.github/workflows/compress-lottie.yml
+++ b/.github/workflows/compress-lottie.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   compress-lottie:
-    name: 🎞 Compress images
+    name: 🎞 Compress lottie
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
