--- a/.github/workflows/compress-lottie.yml
+++ b/.github/workflows/compress-lottie.yml
@@ -12,3 +12,6 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+
+      - name: Compress Lottie
+      - run: find . -name '*.lottie.json' -exec npx lottie-optim -p 1 -o {} {} \;
