--- a/.github/workflows/compress-lottie.yml
+++ b/.github/workflows/compress-lottie.yml
@@ -14,4 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Compress Lottie
-      - run: find . -name '*.lottie.json' -exec npx lottie-optim -p 1 -o {} {} \;
+        run: find . -name '*.lottie.json' -exec npx lottie-optim -p 1 -o {} {} \;
+
+      - name: Verify that the lottie hasn't been changed
+        run: git diff --exit-code HEAD
