--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -9,15 +9,16 @@ on:
       - '**.jpeg'
       - '**.png'
       - '**.webp'
+
 jobs:
-  build:
+  compress-images:
     # Only run on Pull Requests within the same repository, and not from forks.
     if: github.event.pull_request.head.repo.full_name == github.repository
-    name: calibreapp/image-actions
+    name: 🗂 Compress images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Compress Images
         uses: calibreapp/image-actions@main
