--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,8 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.16",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.11",
@@ -22,7 +22,7 @@
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "https://github.com/kirillzyusko/react-native-screens.git#refactor/removed-deprecated-replace-system-window-insets",
+    "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
