--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.16",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
