chore: react-native 0.72 support (#188)
## 📜 Description

Updated `react-native` and related packages to its latest published
versions.

## 💡 Motivation and Context

To be ready for new upcoming changes we need to regularly update
packages and be aligned with `react-native`. Sometimes new packages may
require changes to make it working as it worked before 🙂

Closes
https://github.com/kirillzyusko/react-native-keyboard-controller/issues/196

## 🔮 Known issues

- Android, Fabric, KeyboardAwareScrollView -> `scrollTo` from REA
doesn't work as expected.
- Chat works slowly on Android (especially < 11) - will be handled in
separate PR.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### JS
- react-native 0.72;
- lottie example in Fabric app;
- reanimated 3.4.2 everywhere;
- unit tests in fabric app;
- react-native-gesture-handler is not complaining about packages
duplicate in example/FabricExample;

## 🤔 How Has This Been Tested?

Tested on:
- Xiaomi Redmi Note 5 Pro (Android 9);
- Pixel 7 Pro (Android 13);
- iPhone 14 Pro (iOS 16.4, simulator);
- iPhone 14 Pro (iOS 16.5.1, real device);
- iPhone 6s (iOS 15.6, real device).

## 📸 Screenshots (if appropriate):
<!-- Add screenshots/video if needed -->
<!-- That would be highly appreciated if you can add how it looked
before and after your changes -->

## 📝 Checklist

- [x] CI successfully passed

--- a/.github/workflows/verify-js.yml
+++ b/.github/workflows/verify-js.yml
@@ -52,9 +52,15 @@ jobs:
           yarn install --frozen-lockfile
           cd example
           yarn install --frozen-lockfile
+          cd ../FabricExample
+          yarn install --frozen-lockfile
       - name: Run lib tests
         run: yarn test src
       - name: Run example app tests (verify mocks)
         run: |
           cd example
+          yarn test
+      - name: Run example fabric app tests (verify mocks)
+        run: |
+          cd FabricExample
           yarn test
