--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -6,29 +6,37 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "test": "jest",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/stack": "^6.3.17",
+    "lottie-react-native": "^6.1.2",
     "react": "18.2.0",
-    "react-native": "0.71.11",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "2.12.1",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.0.2",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
+    "react-native-reanimated": "3.4.2",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "3.24.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "metro-react-native-babel-preset": "0.73.10",
+    "@testing-library/jest-native": "^5.3.3",
+    "@testing-library/react-native": "^11.5.0",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^6.4.7",
     "react-test-renderer": "18.2.0"
   },
@@ -41,6 +49,17 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": ["./jestSetup.js"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ],
+    "moduleDirectories": [
+      "<rootDir>/node_modules",
+      "node_modules"
     ]
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
