--- a/detox/package.json
+++ b/detox/package.json
@@ -26,6 +26,7 @@
     "detox": "^20.12.0",
     "jest": "^29",
     "pixelmatch": "^5.3.0",
-    "pngjs": "^7.0.0"
+    "pngjs": "^7.0.0",
+    "ts-jest": "^29.1.1"
   }
 }
