--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -5,10 +5,10 @@ on:
     # See https://help.github.com/en/actions/automating-your-workflow-with-github-actions/workflow-syntax-for-github-actions#onpushpull_requestpaths for reference.
     paths:
       - '.github/workflows/compress-images.yml'
-      - '**.jpg'
-      - '**.jpeg'
-      - '**.png'
-      - '**.webp'
+      - 'docs/**/*.jpg'
+      - 'docs/**/*.jpeg'
+      - 'docs/**/*.png'
+      - 'docs/**/*.webp'
 
 jobs:
   compress-images:
