--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -39,12 +39,12 @@ jobs:
         run: pod install
       - name: Build app
         working-directory: detox
-        run: detox build --configuration example.ios.sim.release
+        run: yarn build-example:ios
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO  
       - name: Test app
         working-directory: detox
-        run: detox test --configuration example.ios.sim.release --take-screenshots failing
+        run: yarn test-example:ios
       - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
         with:
