fix: correct path for uploading failed artifacts

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -51,4 +51,4 @@ jobs:
         if: ${{ failure() }}
         with:
           name: ios-fail-screen-shoots
-          path: ${{ env.WORKING_DIRECTORY }}/artifacts
+          path: detox/artifacts
