refactor: use iPhone 13 Pro (instead 14 Pro)

--- a/detox/package.json
+++ b/detox/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-example:ios": "detox build --configuration example.ios.sim.release",
-    "test-example:ios": "detox test --configuration example.ios.sim.release --take-screenshots failing",
+    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
