--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -18,5 +18,14 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
+
+allprojects {
+    repositories {
+        maven {
+            url("$rootDir/../../detox/node_modules/detox/Detox-android")
+        }
+    }
+ }
