--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -58,5 +58,5 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
         with:
-          name: ios-fail-screen-shoots
+          name: android-fail-screen-shoots
           path: detox/artifacts
