--- a/detox/package.json
+++ b/detox/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build-example:android": "detox build --configuration example.android.emu.release",
-    "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing",
+    "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing --record-videos failing",
     "build-example:ios": "detox build --configuration example.ios.sim.release",
-    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing",
+    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos failing",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,10 +27,11 @@
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1",
     "colors": "^1.4.0",
-    "detox": "^20.12.0",
+    "detox": "^20.12.1",
     "jest": "^29",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "wait-for-expect": "^3.0.2"
   }
 }
