--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           working-directory: detox
           api-level: 28
-          target: default
+          target: google_apis
           profile: pixel_2
           ram-size: '4096M'
           disk-size: '10G'
