--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -19,19 +19,16 @@ jobs:
     env:
       WORKING_DIRECTORY: example
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 16.x
           cache: 'yarn'
-      - name: Set up JDK 17
+      - name: Setup JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'zulu'
-          cache: 'gradle'
+          distribution: 'microsoft'
+          java-version: '11'
       - name: Install root dependencies
         run: yarn install
       - name: Install example project dependencies
@@ -39,6 +36,15 @@ jobs:
         run: yarn
       - name: Install detox dependencies
         run: yarn install --cwd detox
+      - name: Restore Gradle cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-detox-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-detox-gradle-
       - name: Build app
         working-directory: detox
         run: yarn build-example:android
