--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -19,12 +19,10 @@ jobs:
     env:
       WORKING_DIRECTORY: example
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 16.x
           cache: 'yarn'
       - name: Get Xcode version
         run: xcodebuild -version
@@ -37,6 +35,21 @@ jobs:
         run: yarn
       - name: Install detox dependencies
         run: yarn install --cwd detox
+      - name: Restore buildcache
+        uses: mikehardy/buildcache-action@v2
+        continue-on-error: true
+        with:
+          cache_key: react-native-keyboard-controller-detox
+      - name: Restore Pods cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            example/ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
       - name: Install pods
         working-directory: ${{ env.WORKING_DIRECTORY }}/ios
         run: pod install
