refactor: added concurrency (to cancel previous workflows for current PR)

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -18,6 +18,9 @@ jobs:
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
+    concurrency:
+        group: android-e2e-${{ github.ref }}
+        cancel-in-progress: true
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
