refactor: rollback to working version + speed up android build

--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -32,11 +32,21 @@ jobs:
         with:
           distribution: 'microsoft'
           java-version: '11'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Restore node_modules from cache
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - name: Install root dependencies
         run: yarn install
-      - name: Install example project dependencies
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: yarn
+      - name: Install node_modules for example/
+        run: yarn install --frozen-lockfile --cwd example
       - name: Install detox dependencies
         run: yarn install --cwd detox
       - name: Restore Gradle cache
