--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "clang-format": "^1.8.0",
     "commitlint": "^11.0.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^6.0.0",
     "jest": "^29.2.1",
@@ -110,33 +113,6 @@
       }
     }
   },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@react-native",
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "quoteProps": "consistent",
-          "singleQuote": true,
-          "tabWidth": 2,
-          "trailingComma": "es5",
-          "useTabs": false
-        }
-      ],
-      "react-hooks/exhaustive-deps": "warn"
-    },
-    "globals": {
-      "jest": "readonly"
-    }
-  },
-  "eslintIgnore": [
-    "node_modules/",
-    "lib/"
-  ],
   "prettier": {
     "quoteProps": "consistent",
     "singleQuote": true,
