--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "commitlint": "^11.0.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^6.0.0",
