--- a/docs/package.json
+++ b/docs/package.json
@@ -25,8 +25,12 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@argos-ci/cli": "^1.0.0",
+    "@argos-ci/playwright": "^1.0.1",
     "@docusaurus/module-type-aliases": "2.4.0",
+    "@playwright/test": "^1.39.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "cheerio": "^1.0.0-rc.12",
     "markdownlint-cli2": "^0.7.1",
     "typescript": "^4.7.4"
   },
