--- a/.github/workflows/docs-e2e.yml
+++ b/.github/workflows/docs-e2e.yml
@@ -1,15 +1,15 @@
-name: Argos CI Screenshots
+name: 🛠 Docs UI regressions
 
 on:
   push:
     branches: [main]
     paths:
-      - '.github/workflows/argos.yml'
+      - '.github/workflows/docs-e2e.yml'
       - 'docs/**'
   pull_request:
     branches: [main]
     paths:
-      - '.github/workflows/argos.yml'
+      - '.github/workflows/docs-e2e.yml'
       - 'docs/**'
 
 jobs:
