refactor: include src and detox folders for tests running

--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -7,6 +7,8 @@ on:
       - 'package.json'
       - 'ios/**'
       - 'example/**'
+      - 'detox/**'
+      - 'src/**'
   push:
     branches:
       - main
