--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -6,6 +6,8 @@ on:
       - 'package.json'
       - 'android/**'
       - 'example/**'
+      - 'detox/**'
+      - 'src/**'
   push:
     branches:
       - main
