fix: enable `buildFeatures.buildConfig` for AGP 8+

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,9 @@ android {
   def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION
   if (agpVersion.tokenize('.')[0].toInteger() >= 7) {
     namespace "com.reactnativekeyboardcontroller"
+    buildFeatures {
+      buildConfig true
+    }
   }
 
   compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
