--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -66,9 +66,9 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2.28.0
         with:
           working-directory: e2e
-          api-level: 31
-          target: google_apis
-          profile: Galaxy Nexus
+          api-level: 28
+          target: default
+          profile: pixel_2
           ram-size: '4096M'
           disk-size: '10G'
           disable-animations: false
