--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -11,6 +11,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/android-e2e-test.yml'
+      - 'package.json'
+      - 'android/**'
+      - 'example/**'
+      - 'e2e/**'
+      - 'src/**'
 
 jobs:
   test:
