--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -12,6 +12,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/ios-e2e-test.yml'
+      - 'react-native-keyboard-controller.podspec'
+      - 'package.json'
+      - 'ios/**'
+      - 'example/**'
+      - 'e2e/**'
+      - 'src/**'
 
 jobs:
   test:
