chore: fixes after a review

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "keyboard",
     "animation",
     "focused input",
+    "text changed",
     "avoiding view",
     "sticky view",
     "ios",
