chore: fixes after self review

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -28,6 +28,8 @@ end
 target 'KeyboardControllerExample' do
   config = use_native_modules!
 
+  pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
+
   # Flags change depending on the env values.
   flags = get_default_flags()
 
